--- a/labs/ex01/template/taskA.ipynb
+++ b/labs/ex01/template/taskA.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-10-20T20:24:02.021038Z",
@@ -114,24 +114,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "❌ The are some issues with your implementation of `standardize`:\n",
-      "**********************************************************************\n",
-      "File \"__main__\", line 10, in standardize\n",
-      "Failed example:\n",
-      "    standardize(np.array([[1, 2], [3, 4], [5, 6]]))\n",
-      "Expected:\n",
-      "    array([[-1.22474487, -1.22474487],\n",
-      "           [ 0.        ,  0.        ],\n",
-      "           [ 1.22474487,  1.22474487]])\n",
-      "Got:\n",
-      "    0\n",
-      "**********************************************************************\n"
+      "✅ Your `standardize` passed 1 tests.\n"
      ]
     }
    ],
    "source": [
     "def standardize(x):\n",
     "    \"\"\"Stadartize the input data x\n",
+    "\n",
+    "    Substract the mean and divide by std on each dimension\n",
     "    \n",
     "    Args:\n",
     "        x: numpy array of shape=(num_samples, num_features)\n",
@@ -144,7 +135,10 @@
     "           [ 0.        ,  0.        ],\n",
     "           [ 1.22474487,  1.22474487]])\n",
     "    \"\"\"\n",
-    "    std_data = 0\n",
+    "    mean = x.mean(axis=0)\n",
+    "    std = x.std(axis=0)\n",
+    "\n",
+    "    std_data = (x - mean) / std\n",
     "    return std_data\n",
     "\n",
     "\n",
@@ -153,28 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/mikolajboronski/Documents/EPFL/MachineLearning/Labs/ML_course/labs/ex01/template/taskA.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mikolajboronski/Documents/EPFL/MachineLearning/Labs/ML_course/labs/ex01/template/taskA.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39massert\u001b[39;00m standardize(np\u001b[39m.\u001b[39marray([[\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m], [\u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m], [\u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m]])) \u001b[39m==\u001b[39m \\\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mikolajboronski/Documents/EPFL/MachineLearning/Labs/ML_course/labs/ex01/template/taskA.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m      np\u001b[39m.\u001b[39marray([ [\u001b[39m-\u001b[39m\u001b[39m1.22474487\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1.22474487\u001b[39m], \\\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mikolajboronski/Documents/EPFL/MachineLearning/Labs/ML_course/labs/ex01/template/taskA.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m                 [ \u001b[39m0.\u001b[39m        ,  \u001b[39m0.\u001b[39m        ], \\\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mikolajboronski/Documents/EPFL/MachineLearning/Labs/ML_course/labs/ex01/template/taskA.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m                 [ \u001b[39m1.22474487\u001b[39m,  \u001b[39m1.22474487\u001b[39m]]), \\\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mikolajboronski/Documents/EPFL/MachineLearning/Labs/ML_course/labs/ex01/template/taskA.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mFailed standardize test\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
-    }
-   ],
-   "source": [
-    "assert standardize(np.array([[1, 2], [3, 4], [5, 6]])) == \\"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-10-20T20:24:02.043025Z",
@@ -183,11 +156,32 @@
      "shell.execute_reply": "2022-10-20T20:24:02.061506Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.22474487 -1.22474487]\n",
+      " [ 0.          0.        ]\n",
+      " [ 1.22474487  1.22474487]] \n",
+      "\n",
+      " [0. 0.] \n",
+      "\n",
+      " [1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
     "std_data = standardize(data)\n",
     "print(std_data, \"\\n\\n\", np.mean(std_data, axis=0), \"\\n\\n\", np.std(std_data, axis=0))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
